rendered grid lines

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,11 @@
 cmake_minimum_required(VERSION 3.10)
 project(MySFMLProject)
+set(CMAKE_CXX_STANDARD 14)
 
-# Find SFML
 find_package(SFML 2.5 COMPONENTS system window graphics REQUIRED)
+include_directories(include)
 
-# Set source files
-# Add the executable
-add_executable(tetris)
+file(GLOB SOURCES "src/*.cpp")
+add_executable(tetris ${SOURCES})
 
-file(GLOB_RECURSE SOURCE_FILES "src/*.cpp")
-
-target_include_directories(tetris PRIVATE include)
-target_sources(tetris PRIVATE ${SOURCE_FILES})
-# Include SFML headers
-target_include_directories(tetris PRIVATE ${SFML_INCLUDE_DIRS})
-
-target_link_libraries(tetris PRIVATE sfml-system sfml-window sfml-graphics)
+target_link_libraries(tetris sfml-system sfml-window sfml-graphics)
